style.css
/* ... */
@media (max-width:667px)  { 

	.main-container {
		padding-top: 56px;
	}

	.main-container-text {
		padding: 25px;
	}

	.main-container-text h2 {
		font-size: 12px;
		line-height: 25px;
	}

	.main-container-text h3 {
		font-size: 17px;
		line-height: 30px;
	}
}

/*Friend Search Page*/
#searchpagecontent {
	padding-top: 95px;
	text-align: center;
}

/*Password Reset Page*/
#passwordresetcontent {
	padding-top: 61px;
	background-image: linear-gradient(to bottom, rgb(218, 214, 234), rgba(255, 255, 255, 0.73)),url(https://i0.wp.com/www.intelligentliving.co/wp-content/uploads/2019/08/Planting-trees.jpg?w=1751&ssl=1);
	height: 200px;
}

/*Event Page */
#pagecontent {
	margin-top: 44px;
}

#eventform {
	background-image: linear-gradient(to bottom, rgb(218, 214, 234), rgba(255, 255, 255, 0.73)),url(https://i0.wp.com/www.intelligentliving.co/wp-content/uploads/2019/08/Planting-trees.jpg?w=1751&ssl=1);
}

#detailsandmap {
	display: flex;
	max-width: 925px;
	margin: 0 auto;
}

#detailsandmap p {
	font-family: 'Noto Serif JP', sans-serif;
	font-size: 17px;
	padding-bottom: 6px;
}

#detailsandmap textarea {
	height: 33px;
	width: 95%;
	border-radius: 8px;
	font-family: 'Noto Serif JP', sans-serif;
	font-size: 14px;
	padding: 7px;
	resize: none;
	overflow: hidden;
}

.eventdetailsboxes {
	margin: 16px 10px 10px 10px;
}

.eventvalues {
	padding: 2px;
}

#eventInfo {
	width: 95%;
}

#detailsandmap input {
	border-radius: 8px;
	font-family: 'Montserrat', sans-serif;
	font-size: 14px;
	padding: 7px;
	border: 1px solid purple;
}

#datetimeduration {
	display: flex;
}

#datetimebox {
	flex: 1;
}

#datetime {
	width: 90%;
}

#durationbox {
	flex: 1;
	margin-right: 8px;
}

#duration {
	width: 86%;
}

#eventdetails {
	flex: 1;
}

#signupeventbutton {
	display: none;
}

#leaveeventbutton {
	display: none;
}

#canceleventbutton {
	display: none;
}

#viewEventMap {
	height: 200px;
	flex: 1;
	border-radius: 9px;
	border: 1px solid #3F3077;
}

#createdby {
	text-align: center;
	font-size: 19px;
	font-family: 'Noto Serif JP', sans-serif;
	font-weight: bold;
	padding-bottom: 17px;
}

.eventimage {
	display: inline-block;
}

.eventimage img {
	height: 100%;
	max-height: 140px;
	margin: 12px
}

#eventPopup {
    	background: rgba(0,0,0,.6);
    	position: fixed;
    	top: 60px;
    	bottom: 0;
    	left: 0;
    	right: 0;
	display: none;
}

#popupClose {
	font-size: 27px;
	float: right;
	color: white;
	font-weight: bold;
	border-radius: 42px;
	width: 27px;
	text-align: center;
	margin: 9px;
	cursor: pointer;
}

#eventImages {
	position: relative;
	text-align: center;
	margin: 0 auto;
	width: 50%;
	top: 16%;
	background: rgba(0,0,0,0.4);
}

.prev, .next {
  	cursor: pointer;
  	position: absolute;
  	top: 50%;
  	width: auto;
  	margin-top: -22px;
  	padding: 16px;
  	color: white;
  	font-weight: bold;
  	font-size: 18px;
  	transition: 0.6s ease;
  	border-radius: 0 3px 3px 0;
  	user-select: none;
}

.prev {
	left: 0;
}

.next {
  	right: 0;
  	border-radius: 3px 0 0 3px;
}

.eventimagethumb {
	width: 100px;
	height: 100%;
	padding: 10px;
}

.eventimagethumbcontainers {
	display: inline-block;
}

/*Evnet page media queries*/

@media (max-width:800px){
	#detailsandmap {
		flex-direction: column;
	}

	#viewEventMap {
		flex: none;
	}
}

/* Logged in */

#dashboard {
	padding-top: 80px;
	text-align: center;
	background-image: linear-gradient(to bottom, rgb(218, 214, 234), rgba(255, 255, 255, 0.73)),url(https://i0.wp.com/www.intelligentliving.co/wp-content/uploads/2019/08/Planting-trees.jpg?w=1751&ssl=1);
}

#profilepic img {
	height: 100px;
	border-radius: 25px;
}

#scores {
	text-align: center;
	line-height: 50px;
	font-size: 30px;
	padding-bottom: 20px;
	display: flex;
	margin-top: 12px;
}

#inspirationscorespace {
	flex: 1;
}

#volunteerscorespace {
	flex: 1;
}

.scorecard {
	background: white;
	border-radius: 8px;
}

#volunteerscore {
	display: inline-block;
	width: 49%;
}

#inspirationscore {
	display: inline-block;
	width: 49%;
}

#navbar {
	display: flex;
	max-width: 869px;
	margin: 0 auto;
}

.navbutton {
	flex: 1;
	text-align: center;
}

#friendrequestsicon {
	display: inline-block;
	line-height: 70px;
	margin-left: 11px;
}

#friendrequestpopup {
	position: relative;
	width: 377px;
	display: none;
}

#friendrequestpopup ul {
	//display: none;
	position: absolute;
	background-color: #f9f9f9;
	min-width: 160px;
	padding: 12px 16px;
	z-index: 1;
}

#friendrequestpopup ul li {
	display: block;
        color: black;
}

/*footer*/

#footer {
	margin-top: 20px;
}

#partnerpics {
	display: flex;
	align-items: center;
	justify-content: center;
}

#partners h1 {
	text-align: center;
	font-family: 'Noto Serif JP', sans-serif;
	font-size: 30px;
}

#partners hr {
	width: 80%;
	text-align:center; 
	margin: 15px auto;
}

#footer #partners img {
	max-width: 20%;
	min-width: 240px;
	flex: 1;
	align-self: center;
	margin: 40px;
}
 
#legal {
	background: black;
}

#copyright {
	font-size: 13px;
	text-align: center;
}

#additional-links {
	padding: 10px 20%;
}

#additional-links ul {
	list-style: none;
	text-align: center;
}

#additional-links ul li {
	display: inline-block;
	padding: 0px 20px;
}

/*Search.php*/
.searchprofileimage {
	height: 100px;
}

/*signup.php*/

#signupinstructions {
	width: 80%;
	margin: 0 auto;
	color: #3E3076;
}

#signupinstructions h1 {
	font-size: 33px;	
}

#signupinstructions h2 {
	font-family: 'Montserrat', sans-serif;
	padding-top: 5px;
}

#emailformat {
	visibility: hidden;
	color: red;
}

#firstnamewarning {
	visibility: hidden;
}

#lastnamewarning {
	visibility: hidden;
}

#usernamewarning {
	visibility: hidden;
}

#show-tos {
	display: block;
	margin: 0 auto;
	margin-top: 10px;
	width: 30%;
	height: 40px;
	border: none;
	background-color: #222;
	font-family: arial;
	font-size: 16px;
	color: #fff;
	cursor: pointer;
}

#tos {
	background-color: #665882;
	padding: 10px;
	border-top-left-radius: 8px;
	border-top-right-radius: 8px;
}

#tosinteract {
	margin-top: 25px;
}
/* ... */

